cluster/apps/media/homeassistant/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: media
subsets:
- addresses:
  - ip: 192.168.100.64
  ports:
  - port: 8123
