cluster/apps/media/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: media
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8123
      name: http
