cluster/apps/media/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "${CLOUDFLARE_DDNS_RECORD}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "ha.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 80
  tls:
    - hosts:
        - *host
